--- a/stencil-comps/src/index.html
+++ b/stencil-comps/src/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Stencil Component Starter</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
+    <title>Stencil Component Starter</title>
 
-  <script type="module" src="/build/stencil-comps.esm.js"></script>
-  <script nomodule src="/build/stencil-comps.js"></script>
+    <script type="module" src="/build/stencil-comps.esm.js"></script>
+    <script nomodule src="/build/stencil-comps.js"></script>
+  </head>
+  <body>
+    <my-component
+      first="Stencil"
+      last="'Don't call me a framework' JS"
+    ></my-component>
 
-</head>
-<body>
-
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-
-</body>
+    <knc-greet-component>Hello World from KNC</knc-greet-component>
+  </body>
 </html>
