--- a/web-comp-todos/packages/todos-app/.storybook/preview-head.html
+++ b/web-comp-todos/packages/todos-app/.storybook/preview-head.html
@@ -1,2 +1,12 @@
 <script type="module" src="/web-comp-todos/web-comp-todos.esm.js"></script>
 <script nomodule="" src="/web-comp-todos/web-comp-todos.js"></script>
+<link
+  href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Playfair+Display:ital@0;1&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="//cdn.muicss.com/mui-0.10.2/css/mui.min.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<script src="//cdn.muicss.com/mui-0.10.2/js/mui.min.js"></script>
